--- a/firebase.html
+++ b/firebase.html
@@ -3,132 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FormularioDoctor</title>
-    <!-- Add Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Registro de Doctor</title>
     <style>
-      body {
-          font-family: 'Arial', sans-serif;
-          background-color: #f4f4f4;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          height: 100vh;
-      }
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
 
-      h2 {
-          color: #333;
-      }
+        h2 {
+            color: #333;
+        }
 
-      form {
-          background-color: #fff;
-          padding: 20px;
-          border-radius: 8px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          width: 300px;
-          margin-bottom: 20px;
-      }
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            margin-bottom: 20px;
+        }
 
-      label {
-          display: block;
-          margin-bottom: 8px;
-          color: #333;
-      }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #333;
+        }
 
-      input {
-          width: 100%;
-          padding: 8px;
-          margin-bottom: 12px;
-          box-sizing: border-box;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-      }
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 12px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-      button {
-          margin-top: 8px;
-      }
+        button {
+            background-color: #4caf50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-      ul {
-          list-style-type: none;
-          padding: 0;
-          margin: 0;
-      }
+        button:hover {
+            background-color: #45a049;
+        }
 
-      li {
-          background-color: #fff;
-          padding: 15px;
-          margin-bottom: 10px;
-          border-radius: 4px;
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-          display: flex;
-          flex-direction: column;
-      }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-      li strong {
-          font-size: 18px;
-          margin-bottom: 8px;
-      }
+        li {
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+        }
 
-      li p {
-          margin: 0;
-          color: #555;
-      }
+        li strong {
+            font-size: 18px;
+            margin-bottom: 8px;
+        }
 
-      li button {
-          margin-top: 8px;
-      }
+        li p {
+            margin: 0;
+            color: #555;
+        }
 
-      li button {
-          background-color: #d9534f;
-          color: white;
-          padding: 6px 10px;
-          border: none;
-          border-radius: 4px;
-          cursor: pointer;
-      }
+        li button {
+            background-color: #d9534f;
+            color: white;
+            padding: 6px 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 8px;
+        }
 
-      li button:hover {
-          background-color: #c9302c;
-      }
-  </style>
+        li button:hover {
+            background-color: #c9302c;
+        }
+    </style>
 </head>
 <body>
-   
-  <h2>Registro de Doctor</h2>
 
-  <!-- Formulario de Registro -->
-  <form id="doctorForm">
-      <label for="id">ID</label>
-      <input type="text" id="id" readonly>
-      
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required>
-  
-      <label for="especialidad">Especialidad:</label>
-      <input type="text" id="especialidad" name="especialidad" required>
-  
-      <label for="direccion">Dirección:</label>
-      <input type="text" id="direccion" name="direccion">
-  
-      <label for="telefono">Teléfono:</label>
-      <input type="tel" id="telefono" name="telefono">
-  
-      <label for="correo">Correo Electrónico:</label>
-      <input type="email" id="correo" name="correo">
-  
-      <button type="button" class="btn btn-success" onclick="crearDoctor()">Registrar</button>
-      <button type="button" class="btn btn-primary" onclick="editarDoctor()">Editar</button>
-      <button type="button" class="btn btn-danger" onclick="eliminarDoctor()">Eliminar</button>
+<h2>Registro de Doctor</h2>
 
-  </form>
+<!-- Formulario de Registro -->
+<form id="doctorForm">
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required>
 
-  <!-- Lista de Registros -->
-  <ul id="listaDoctores"></ul>
+    <label for="especialidad">Especialidad:</label>
+    <input type="text" id="especialidad" name="especialidad" required>
 
-  <script type="module">
+    <label for="direccion">Dirección:</label>
+    <input type="text" id="direccion" name="direccion">
+
+    <label for="telefono">Teléfono:</label>
+    <input type="tel" id="telefono" name="telefono">
+
+    <label for="correo">Correo Electrónico:</label>
+    <input type="email" id="correo" name="correo">
+
+    <button type="button" onclick="crearDoctor()">Registrar</button>
+</form>
+
+<!-- Lista de Doctores -->
+<h2>Listado de Doctores</h2>
+<ul id="listaDoctores">
+    <!-- Aquí se mostrarán los doctores registrados -->
+</ul>
+
+<script type="module">
+    
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
     import { getDatabase, ref, push, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
@@ -148,121 +150,31 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
+    var doctores = [];
 
-    window.crearDoctor = function () {
-        const nombre = document.getElementById("nombre").value;
-        const especialidad = document.getElementById("especialidad").value;
-        const direccion = document.getElementById("direccion").value;
-        const telefono = document.getElementById("telefono").value;
-        const correo = document.getElementById("correo").value;
-        console.log(nombre, especialidad, direccion, telefono);
-        push(
-            ref(database, 'Naim'),
-            {
-                name: nombre,
-                specialty: especialidad,
-                address: direccion,
-                telephone: telefono,
-                mail: correo
-            }
-        );
-        limpiarFormulario();
-        cargarDoctores();
-    }
+    function crearDoctor() {
+        var nombre = document.getElementById("nombre").value;
+        var especialidad = document.getElementById("especialidad").value;
+        var direccion = document.getElementById("direccion").value;
+        var telefono = document.getElementById("telefono").value;
+        var correo = document.getElementById("correo").value;
 
-    window.editarDoctor = function () {
-        const id = document.getElementById("id").value;
-        const nombre = document.getElementById("nombre").value;
-        const especialidad = document.getElementById("especialidad").value;
-        const direccion = document.getElementById("direccion").value;
-        const telefono = document.getElementById("telefono").value;
-        const correo = document.getElementById("correo").value;
-
-        if (!id) {
-            console.log("Por favor, selecciona un doctor para editar.");
-            return;
-        }
-
-        const updates = {
-            name: nombre,
-            specialty: especialidad,
-            address: direccion,
-            telephone: telefono,
-            mail: correo
+        var nuevoDoctor = {
+            nombre: nombre,
+            especialidad: especialidad,
+            direccion: direccion,
+            telefono: telefono,
+            correo: correo
         };
-        update(ref(database, `Naim/${id}`), updates);
-        console.log("Registro actualizado con éxito.");
-        limpiarFormulario();
-        cargarDoctores();
+
+        doctores.push(nuevoDoctor);
+
+        document.getElementById("doctorForm").reset();
+
+        actualizarListaDoctores();
     }
 
-    window.eliminarDoctor = function () {
-        const id = document.getElementById("id").value;
-        if (!id) {
-            console.log("Por favor, selecciona un doctor para eliminar.");
-            return;
-        }
-        remove(ref(database, `Naim/${id}`));
-        console.log("Registro eliminado con éxito.");
-        limpiarFormulario();
-        cargarDoctores();
-    }
-
-    window.cargarDoctores = function () {
-        const listaDoctores = document.getElementById("listaDoctores");
-        listaDoctores.innerHTML = "";
-
-        const databaseRef = ref(database, 'Naim');
-        onValue(databaseRef, (snapshot) => {
-            const data = snapshot.val();
-            if (data) {
-                Object.keys(data).forEach((doctorId) => {
-                    const doctor = data[doctorId];
-                    const li = document.createElement("li");
-                    li.innerHTML = `
-                        <strong>${doctor.name}</strong>
-                        <p>Especialidad: ${doctor.specialty}</p>
-                        <p>Dirección: ${doctor.address}</p>
-                        <p>Teléfono: ${doctor.telephone}</p>
-                        <p>Correo: ${doctor.mail}</p>
-                        <button class="btn btn-primary" onclick="cargarDatosDoctor('${doctorId}')">Editar</button>
-                        <button class="btn btn-danger" onclick="eliminarDoctor('${doctorId}')">Eliminar</button>
-                    `;
-                    listaDoctores.appendChild(li);
-                });
-            }
-        });
-    }
-
-    window.cargarDatosDoctor = function (doctorId) {
-        const doctorRef = ref(database, `Naim/${doctorId}`);
-        onValue(doctorRef, (snapshot) => {
-            const doctor = snapshot.val();
-            if (doctor) {
-                document.getElementById("id").value = doctorId;
-                document.getElementById("nombre").value = doctor.name;
-                document.getElementById("especialidad").value = doctor.specialty;
-                document.getElementById("direccion").value = doctor.address;
-                document.getElementById("telefono").value = doctor.telephone;
-                document.getElementById("correo").value = doctor.mail;
-            }
-        });
-    }
-
-    window.limpiarFormulario = function () {
-        document.getElementById("id").value = "";
-        document.getElementById("nombre").value = "";
-        document.getElementById("especialidad").value = "";
-        document.getElementById("direccion").value = "";
-        document.getElementById("telefono").value = "";
-        document.getElementById("correo").value = "";
-    }
-
-    // Cargar la lista de doctores al cargar la página
-    cargarDoctores();
   </script>
 
-  <!-- Add Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
